# event-mon-bot

./: .gitignore  Cargo.toml  canister_ids.json  dfx.json
scripts/: build-bot.sh  build-monitor.sh
scripts/dev/: 01-deploy-bot.sh  02-deploy-monitor.sh  02-update-mon-wasm.sh
scripts/prod/: 01-deploy-bot.sh  02-update-mon-wasm.sh
src/: bot.did  lib.rs  router.rs  state.rs
src/lifecycle/: init.rs  mod.rs  post_upgrade.rs  pre_upgrade.rs
src/router/: commands.rs
src/router/commands/: cli.rs  sync_api_key.rs
src/states/: mon.rs
src/types/: cli.rs  init.rs  job.rs  mod.rs
src/utils/: scheduler.rs
