[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.10"
ic-cdk = "0.17.0"
ic-cdk-timers = "0.11.0"
ic-http-certification = "2.5.0"
icrc-ledger-types = "0.1.5"
ic-stable-structures = "0.6.7"
ic-wasi-polyfill = "0.6.4"
async-trait = "0.1.86"
serde = "1.0.217"
serde_json = "1.0.138"
rmp-serde = "1.3.0"
clap = { version = "4.5.32", features = ["derive"] }
ansi-to-html = {version = "0.2.2", default-features = false}
shell-words = "1.1.0"
oc_bots_sdk = {git = "https://github.com/open-chat-labs/open-chat-bots.git"}
oc_bots_sdk_canister = {git = "https://github.com/open-chat-labs/open-chat-bots.git"}

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
debug = false